samples/_failures_safe/1761075678_ebe845_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c6ed7e5.c:166: error: expected ‘;’, ‘,’ or ‘)’ at end of input
